--- a/src/components/paginate/paginate.scss
+++ b/src/components/paginate/paginate.scss
@@ -3,4 +3,20 @@
   justify-content: space-between;
   color: var(--beta);
   font-weight: bold;
+
+  .disabled {
+    color: gray;
+    pointer-events: none;
+    cursor: not-allowed;
+  }
+
+  .page-numbers {
+    display: flex;
+    gap: 10rem;
+  }
+  li.active {
+    border: 2px solid var(--beta);
+    padding: 0rem 5rem;
+    cursor: pointer;
+  }
 }
